# Pincode-Serviceability-Microservice

./: README.md  Test_Merchant_Onboard.csv  compose.yaml
backend/: .gitignore  Cargo.toml  Rocket.toml  compose.yaml  rust.dockerfile
backend/migrations/2023-12-30-213452_add_merchants/: down.sql  up.sql
backend/src/: cors.rs  email.rs  main.rs  models.rs  schema.rs  utils.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/components/: Footer.tsx  NavBar.tsx  UpdateMerchant.tsx
frontend/src/pages/: MerchantServiceability.tsx  Merchants.tsx  _document.tsx  index.tsx
frontend/src/pages/merchants/: [id].tsx
frontend/src/styles/: globals.css
