[package]
name = "redis_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0",  features = ["json"] }
rocket_cors = "0.6.0"
rocket_contrib = "0.4.11"
redis = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
postgres = "0.19"
diesel = { version = "2.0.4", features = ["postgres"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
csv = "1.1.6"
lettre = "0.11.4"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_postgres"]